# GalaxyHunter

./: .gitignore  .gitmodules  .kateproject  CMakeLists.txt  README.md  shoot.sh
cmake/: FindImageMagick.cmake  FindMagick.cmake  FindROOT.cmake
docker/: CMakeLists.txt
docker/Ubuntu-14.04/: Dockerfile
docker/Ubuntu-14.04/rootdir/etc/apt/sources.list.d/: qt55-ppa.key  qt55.list
docker/Ubuntu-15.04/: Dockerfile
dslr-qt-shooter/: CMakeLists.txt  common.h  dslr_shooter_window.cpp  dslr_shooter_window.h  dslr_shooter_window.ui  gphoto.cpp  gphoto.h  linguider.cpp  linguider.h  main.cpp  resources.qrc
dslr-qt-shooter/commons/: shootersettings.cpp  shootersettings.h
dslr-qt-shooter/files/: CMakeLists.txt  dslr-qt-shooter.desktop
dslr-qt-shooter/guider/: CMakeLists.txt
dslr-qt-shooter/imaging/: CMakeLists.txt  file2image.h  focus.cpp  focus.h  gphoto.cpp  gphoto.h  imager_driver.h  imaging_driver.cpp  imaging_driver.h  imagingmanager.cpp  imagingmanager.h  imagingsequence.cpp  imagingsequence.h  testingimager.cpp  testingimager.h
dslr-qt-shooter/imaging/focus/: fitshistogram.cpp  fitsimage.cpp  fitsimage.h
dslr-qt-shooter/imaging/gphoto/: CMakeLists.txt  gphoto.cpp  gphoto.h  gphoto_camera.cpp  gphoto_camera.h  gphoto_camera_information.h  gphoto_camera_p.h  gphoto_commons.h  serialshoot.cpp  serialshoot.h
dslr-qt-shooter/imaging/testing/: CMakeLists.txt  testingimager.cpp  testingimager.h
dslr-qt-shooter/imaging/testing/files/: .directory
dslr-qt-shooter/qwt-src/: CMakeLists.txt
dslr-qt-shooter/telescope/: CMakeLists.txt  devicepage.cpp  devicepage.h  devicespanel.cpp  devicespanel.h  devicespanel.ui  indiclient.cpp  indiclient.h  indidouble.cpp  indidouble.h  inumberwidget.cpp  inumberwidget.h  ledindicator.cpp  ledindicator.h  lightvectorproperty.cpp  lightvectorproperty.h  numbervectorproperty.cpp  numbervectorproperty.h  switchvectorproperty.cpp  switchvectorproperty.h  switchvectorproperty.ui  telescope.cpp  telescope.h  telescopecontrol.cpp  telescopecontrol.h  telescoperemotecontrol.cpp  telescoperemotecontrol.h  telescoperemotecontrol.ui  textvectorproperty.cpp  textvectorproperty.h  vectorproperty.cpp  vectorproperty.h
dslr-qt-shooter/tests/: CMakeLists.txt  focusing_test_tool.cpp  testindidouble.cpp  testindidoubleformat.cpp  testrawconversion.cpp  testsequence.cpp
dslr-qt-shooter/ui/: CMakeLists.txt  camera_setup.ui  camerasetup.cpp  camerasetup.h  dslr_shooter_window.cpp  dslr_shooter_window.h  dslr_shooter_window.ui  imagesettingsdialog.cpp  imagesettingsdialog.h  imagesettingsdialog.ui  logmessage.cpp  logmessage.h  messageswindow.cpp  messageswindow.h  messageswindow.ui  qzerotextspinbox.cpp  qzerotextspinbox.h  sequenceswidget.cpp  sequenceswidget.h  sequenceswidget.ui  zoomableimage.cpp  zoomableimage.h
dslr-qt-shooter/utils/: dptr.h  fitshistogram.h  fitsimage.cpp  fitsimage.h  qlambdathread.cpp  qlambdathread.h  qt.h  sequence.h
scripts/: CMakeLists.txt  dslr-bulb-capture  dslr-previewer  dslr-shoot
set-serial-signal/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  resources.qrc
src/commons/: CMakeLists.txt  logmessage.cpp  shootersettings.cpp  shootersettings.h  version.h.in
src/core/: CMakeLists.txt  settings.cpp  settings.h
src/files/: CMakeLists.txt  application.desktop  objects.db.xz
src/files/icons/: CMakeLists.txt
src/files/telescope/: .directory
src/guider/: CMakeLists.txt
src/imaging/: CMakeLists.txt  file2image.cpp  focus.cpp  focus.h  imager.cpp  imager.h  imaging_driver.cpp  imaging_driver.h  imagingmanager.cpp  imagingmanager.h  imagingsequence.cpp  imagingsequence.h  sequence_element.h
src/imaging/focus/: fitshistogram.cpp  fitshistogram.h  fitsimage.cpp  fitsimage.h
src/imaging/gphoto/: CMakeLists.txt  gphoto.cpp  gphoto.h  gphoto_camera.cpp  gphoto_camera.h  gphoto_camera_p.h  serialshoot.cpp
src/imaging/testing/: CMakeLists.txt  resources.qrc  testing_imager_resources.qrc  testingimager.cpp  testingimager.h
src/imaging/testing/files/: .directory
src/telescope/: CMakeLists.txt  devicepage.cpp  devicespanel.cpp  indiclient.cpp  indidouble.cpp  indidouble.h  ledindicator.cpp  numbervectorproperty.cpp  switchvectorproperty.cpp  switchvectorproperty.h  telescoperemotecontrol.ui  textvectorproperty.h
src/tests/: CMakeLists.txt  testindidouble.cpp
src/ui/: CMakeLists.txt  addsequenceitem.ui  camera_setup.ui  camerasetup.cpp  camerasetup.h  dslr_shooter_window.cpp  dslr_shooter_window.h  dslr_shooter_window.ui  histogram.cpp  histogram.h  histogram.ui  imagesettingsdialog.cpp  imagesettingsdialog.h  imagesettingsdialog.ui  sequenceswidget.cpp  sequenceswidget.ui
src/utils/: hfd.c  qt.h  scope.h
