project(GalaxyHunter)
set(PROJECT_NICE_NAME "Galaxy Hunter")
set(MAJOR_VERSION 0)
set(MINOR_VERSION 2)
set(PATCH_VERSION 0)
#find_path(CIMG_BAYER CImg/plugins/bayer.h)
add_definitions(-Dcimg_display=0 -Dcimg_use_jpeg=1)

cmake_minimum_required(VERSION 2.8.11)
enable_testing()
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fPIC")
#add_subdirectory("set-serial-signal")
#add_subdirectory(scripts)
add_subdirectory(src)
add_subdirectory(docker)

SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "GuLinux.net GalaxyHunter DSLR Manager")
SET(CPACK_PACKAGE_VENDOR "GuLinux <marco@gulinux.net>")
SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_SOURCE_DIR}/README.md")
#SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/src/")
SET(CPACK_PACKAGE_VERSION_MAJOR "${MAJOR_VERSION}")
SET(CPACK_PACKAGE_VERSION_MINOR "${MINOR_VERSION}")
SET(CPACK_PACKAGE_VERSION_PATCH "${PATCH_VERSION}")
SET(CPACK_PACKAGE_CONTACT "marco@gulinux.net")
#SET(CPACK_STRIP_FILES "bin/planetary_imager")
SET(CPACK_GENERATOR DEB)
SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libqt5gui5 (>= 5.4.0), libqt5widgets5 (>= 5.4.0), libopencv-core2.4")
INCLUDE(CPack)
